Completely reworked the project

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% block title %}{% endblock %}</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        {% block content %} {% endblock %}
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/app.css">
+    <title>Madlibs</title>
+</head>
+<body>
+    <main>
+        <h1>Madlibs!</h1>
+    {% block content %} {% endblock %}    
+    </main>
+</body>
 </html>
