--- a/templates/story.html
+++ b/templates/story.html
@@ -1,6 +1,5 @@
-{% extends 'base.html' %}
-{% block title %}Madlibs Story{% endblock %}
+{% extends 'base.html'%}
 {% block content %}
-    <h1>Your Story</h1>
+    <h3>Your Version of {{title}}</h3>
     <p>{{ text }}</p>
-{%endblock%}
+{% endblock %}
