--- a/static/app.css
+++ b/static/app.css
@@ -1,26 +1,39 @@
+body {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #f1f2f4;
+	width: 60%;
+	height: 1000px;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    width: 500px;
-    justify-content: space-evenly;
-    padding: 5px;
+	display: flex;
+	flex-direction: column;
+	width: 500px;
+	justify-content: space-evenly;
+	padding: 5px;
 }
 
 select {
-    margin: 5px 0;
+	margin: 5px 0;
 }
 
 form input {
-    margin: 5px 0;
+	margin: 5px 0;
 }
 
 button {
-    width: 100px;
+	width: 100px;
+}
+
+h1 {
+	font-size: 5rem;
+	margin-bottom: 0;
+	font-family: 'Comic Neue', cursive;
 }
